# tech-team-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  task.template.md
.github/workflows/: publish.yml
hooks/: pre-commit.example
src/: __init__.py  cli.py  collab.py  config.py  context.py  mcp_server.py  orchestrator.py
src/agents/: __init__.py  architect.py  base.py  developer.py  qa.py  reviewer.py  security.py
src/tools/: __init__.py  executor.py  registry.py
tests/: test_agents.py
